@@ -46,9 +46,11 @@ u16_t inet_chksum_pbuf(struct pbuf *p);
 u16_t inet_chksum_pseudo(struct pbuf *p,
        struct ip_addr *src, struct ip_addr *dest,
        u8_t proto, u16_t proto_len);
+#if LWIP_UDPLITE
 u16_t inet_chksum_pseudo_partial(struct pbuf *p,
        struct ip_addr *src, struct ip_addr *dest,
        u8_t proto, u16_t proto_len, u16_t chksum_len);
+#endif
 
 #ifdef __cplusplus
 }
